--- a/adminVista/Administrador.html
+++ b/adminVista/Administrador.html
@@ -15,6 +15,6 @@
         <button id="btnCompra">Compra</button>
     </div>
 
-    <script src="Administrador.css"></script>
+    <script src="Administrador.js"></script>
 </body>
 </html>
